fix: manual contact selection to broadcast messages
